== 0.4.0

* Major refactoring of API module - converted it to a class with API methods
implemented as instance methods. Code is much cleaner and Connection class 
becomes redundant. See updated documentation.

== 0.3.0

* Display proper message status, not just the code
* Make it possible to specify custom :from number/name using SMS utility
* Added support for custom :from number/name when sending a message.
* Added support for checking message status to sms utility
* sms utility now returns the id of a successfully sent message.
* Capture API KEY errors.
* Make sure errors are handled when using sms utility to check balance.

== 0.2.0 

* Added Clickatell API error handling to API and sms utility.
* Handle required/optional arguments for sms utility correctly
* Added further sms utility usage information to website
* Make sure sms utility gracefully handles missing recipient/message
* Added balance query support to API and SMS utility (--check-balance).

== 0.1.0 2007-08-17

* Initial release.